--- a/w2/index.html
+++ b/w2/index.html
@@ -17,6 +17,7 @@
             <li><a href="../w1/index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
             <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
             <li><a href="../w3/index.html">&nbsp;&nbsp;&nbsp;Week 3</a></li>
+            <li><a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a></li>
         </ul>
     </nav>
     <header></header>
