--- a/w4/index.html
+++ b/w4/index.html
@@ -40,6 +40,10 @@
                     </pre>
                 </figure>-->
             </article>
+            <article>
+                <h3>Team Activity: TicTacToe</h3>
+                <p><a href="team_activity" class="minimal-margin-padding">Go to Sample Code</a></p>
+            </article>
         </section>
     </main>
     <footer>
