--- a/w4/team_activity/index.html
+++ b/w4/team_activity/index.html
@@ -67,7 +67,7 @@
     <main>
         <section>
             <div class="team-activity-container">
-                <div class="result">&nbsp;</div>
+                <div class="result"></div>
                 <div class="board-container">
                     <div id="cell-one" data-value="0"></div>
                     <div id="cell-two" data-value="1" class="border-left-right"></div>
@@ -96,6 +96,8 @@
 
         let moves = ['', '', '', '', '', '', '', '', ''];
         let counter = 0;
+        let message = '';
+        gameResult.innerHTML = 'Player X turn.';
 
         function checkWinner(moves) {
             const winningMoves = [
@@ -164,26 +166,33 @@
             });
             moves = ['', '', '', '', '', '', '', '', ''];
             counter = 0;
-            gameResult.innerHTML = '&nbsp';
+            gameResult.innerHTML = 'Player X turn.';
             enableDisableBoard(false);
         }
+
+        let winner = false;
 
         function touchend(event) {
             event.preventDefault;
             let clickedCell = event.target.id;
-            let message = '&nbsp';
+            let nextPlayerMark = '';
 
             if (checkCellMark(clickedCell)) {
                 if (counter % 2 === 0) {
                     mark = 'X';
+                    nextPlayerMark = 'O';
                 } else {
-                    mark = 'O'
+                    mark = 'O';
+                    nextPlayerMark = 'X';
+
                 }
                 let moves = markCell(clickedCell, mark);
+                message = `Player ${nextPlayerMark} turn.`;
                 let hasWinner = checkWinner(moves);
                 if (hasWinner[0]) {
                     message = `Player ${hasWinner[1]} wins!`;
                     enableDisableBoard(true);
+                    winner = true;
                     //reset();
                 }
                 counter += 1;
@@ -191,7 +200,8 @@
                 alert('Choose another cell.');
             }
 
-            if (counter === 9 && message === '&nbsp;') {
+            console.log(!winner);
+            if (counter === 9 && !winner) {
                 message = 'It\'s a tie!';
             }
 
