--- a/w5/index.html
+++ b/w5/index.html
@@ -88,25 +88,35 @@
             }
         }
 
+        function removeItem() {}
+
         // display todo list
         const todoListStorage = JSON.parse(localStorage.getItem('todos'));
         const todoList = document.querySelector('#todo-list');
 
-        todoListStorage.forEach(todoItem => {
+        todoListStorage.forEach((todoItem, index) => {
             const li = document.createElement('li');
             li.classList.add('todo-item');
             const checkBox = document.createElement('input');
             checkBox.setAttribute('type', 'checkbox');
+            checkBox.setAttribute('id', `chk-${index}`);
             li.appendChild(checkBox);
             const div = document.createElement('div');
-            console.log(todoItem['content']);
+            console.log(index, todoItem['content']);
             div.innerHTML = todoItem['content'];
             li.appendChild(div);
             const btnCompleted = document.createElement('button');
             btnCompleted.innerHTML = 'X';
+            btnCompleted.setAttribute('id', `btn-${index}`)
+            btnCompleted.addEventListener('click', function () {
+                console.log(1);
+                todoListStorage.splice(index, 1);
+                localStorage.setItem('todos', JSON.stringify(todoListStorage));
+            });
             li.appendChild(btnCompleted);
+
             //li.innerHTML = todoItem['content'];
-            todoList.insertBefore(li, todoList.childNodes[0]);
+            todoList.insertBefore(li, todoList.childNodes[index]);
         });
 
         //console.log(JSON.stringify(window.localStorage.getItem('todos')));
