Started refactoring todo

--- a/w5/todo_challenge/todo.html
+++ b/w5/todo_challenge/todo.html
@@ -38,7 +38,7 @@
             </div>
         </section>
     </main>
-    <script src="todos.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
