--- a/w1/index.html
+++ b/w1/index.html
@@ -15,9 +15,10 @@
             <li><a href="#" id="menu"><strong>&equiv; Menu</strong></a></li>
             <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
             <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
-            <li><a href="../w2/index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
-            <li><a href="../w3/index.html">&nbsp;&nbsp;&nbsp;Week 3</a></li>
-            <li><a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a></li>
+            <li><a href="../w2/">&nbsp;&nbsp;&nbsp;Week 2</a></li>
+            <li><a href="../w3/">&nbsp;&nbsp;&nbsp;Week 3</a></li>
+            <li><a href="../w4/">&nbsp;&nbsp;&nbsp;Week 4</a></li>
+            <li><a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a></li>
         </ul>
     </nav>
     <header></header>
