--- a/w3/index.html
+++ b/w3/index.html
@@ -14,10 +14,11 @@
         <ul id="menuLink">
             <li><a href="#" id="menu"><strong>&equiv; Menu</strong></a></li>
             <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
-            <li><a href="../w1/index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
-            <li><a href="../w2/index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
+            <li><a href="../w1/">&nbsp;&nbsp;&nbsp;Week 1</a></li>
+            <li><a href="../w2/">&nbsp;&nbsp;&nbsp;Week 2</a></li>
             <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 3</a></li>
-            <li><a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a></li>
+            <li><a href="../w4/">&nbsp;&nbsp;&nbsp;Week 4</a></li>
+            <li><a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a></li>
         </ul>
     </nav>
     <header></header>
